# loxpp

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  AGENTS.md  APPLY_PATCH.sh  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TESTING.md  apply_phase32.py  devbox.json  test_enum_noloop.lox  test_guard.lox  test_just_match.lox  test_loop.lox  test_loop_bug.lox  test_loop_simple.lox  test_match_assign.lox  test_match_loop.lox  test_minimal.lox  test_noassign.lox  test_print_val.lox  test_simple.lox  test_subscript.lox
.githooks/: pre-commit
.github/workflows/: ci.yml  clang-tidy.yml  copilot-setup-steps.yml
benchmarks/: SOURCES.md  binary_trees.lox  crosslang.py  fib.lox  langs.toml  mandelbrot.lox  manifest.toml  method_call.lox  nbody.lox  runner.py  sieve.lox  towers.lox
benchmarks/clox/: fib.lox  mandelbrot.lox  queens.lox  towers.lox
benchmarks/containers/: Dockerfile.clox  Dockerfile.js  Dockerfile.lua  Dockerfile.python  Dockerfile.wren  run_awfy_js.js  run_awfy_lua.sh  run_awfy_python.py
benchmarks/js/: fib.js  mandelbrot.js  queens.js  towers.js
benchmarks/lox/: binary_trees.lox  bounce.lox  cd.lox  deltablue.lox  earley.lox  fannkuch.lox  fasta.lox  fib.lox  for_in.lox  havlak.lox  instantiation.lox  json.lox  k_nucleotide.lox  list.lox  mandelbrot.lox  nbody.lox  permute.lox  queens.lox  reverse_complement.lox  richards.lox  sieve.lox  spectral_norm.lox  storage.lox  string_interning.lox  towers.lox  zoo.lox
benchmarks/lua/: fib.lua  mandelbrot.lua  queens.lua  towers.lua
benchmarks/python/: fib.py  mandelbrot.py  queens.py  towers.py
benchmarks/wren/: fib.wren  mandelbrot.wren  queens.wren  towers.wren
bootstrap/: lox_interpreter.lox  lox_wrapper.sh  loxpp_interpreter.lox  loxpp_wrapper.sh
examples/: anagram.lox  anagram_groups.lox  ast_eval.lox  at_binding_demo.lox  bench_jump_table.lox  caesar.lox  class_dispatch.lox  clock_arithmetic.lox  collatz.lox  config_parser.input  config_parser.lox  csv_reader.input  csv_reader.lox  data_pipeline.lox  digital_root.lox  enum_match.lox  enum_result.lox  enum_tree.lox  fibonacci.lox  fizzbuzz.lox  flatten.lox  gcd_lcm.lox  graph_bfs_dfs.lox  grep_lite.input  grep_lite.lox  guessing_game.input  guessing_game.lox  hanoi.lox  higher_order.lox  histogram.lox  huffman.lox  leap_year.lox  line_sorter.input  line_sorter.lox  linear_regression.lox  log_writer.lox  luhn.lox  match_dispatch.lox  match_http_status.lox  match_state_machine.lox  (+30 more)
notes/: benchmark_report_jump_table.md  clr-backend-plan.md  concurrency_in_bytecode_vms.md  dynamic-functional-programming.md  expressiveness-roadmap.md  jvm-backend-plan.md  language-extension.md  pattern-matching-counterpoints.md  pattern-matching-design.md  pattern-matching-syntax.md  pattern-matching.md  profiler-concurrency-notes.md
spec/: 01-lexical.md  02-syntax.md  03-types.md  04-semantics.md  05-stdlib.md  README.md
src/: allocator.h  arena_allocator.cpp  arena_allocator.h  chunk.cpp  chunk.h  class_objects.h  compiler.cpp  compiler.h  compiler_matchexpr.patch  container_objects.cpp  container_objects.h  core_hash_map.h  debug.cpp  debug.h  escape.h  exec_objects.h  function.h  lox_allocator.h  main.cpp  math.cpp  math.h  memory.h  memory_manager.cpp  memory_manager.h  native.h  object.cpp  object.h  objects.h  overload.h  parser.cpp  parser.h  profiler.h  scanner.cpp  scanner.h  simple_allocator.cpp  simple_allocator.h  table.cpp  table.h  token.cpp  token.h  (+7 more)
src/stdlib/: file_api.cpp  file_api.h  globals.cpp  globals.h  map_api.cpp  map_api.h  math_module.cpp  math_module.h  stdlib_context.cpp  stdlib_context.h  stdlib_registrar.cpp  stdlib_registrar.h
test/: CMakeLists.txt  profiler_test.cpp  test_allocator.cpp  test_at_binding.cpp  test_class_pattern.cpp  test_closures.cpp  test_control_flow.cpp  test_enum.cpp  test_gc_regression.cpp  test_harness.cpp  test_harness.h  test_inheritance.cpp  test_list.cpp  test_list_pattern.cpp  test_local_variables.cpp  test_main.cpp  test_map.cpp  test_match_expr.cpp  test_or_pattern.cpp  test_parser_bytecode.cpp  test_parser_vm.cpp  test_reflect.cpp  test_scanner.cpp  test_seq_destructure.cpp  test_sequence.cpp  test_slice.cpp  test_stress_gc.cpp  test_table.cpp  test_var_destructure.cpp  test_vm_runtime.cpp
tools/: check_examples.py  check_examples_bootstrap.py  clang_tidy_report.py  run_benchmarks.py
